codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__plan_checklist__tests__renders_completed_plan_until_cleared.snap
---
source: tui/src/bottom_pane/plan_checklist.rs
expression: "render(&checklist, 54)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 54, height: 3 },
    content: [
        "• Plan 2/2 complete                                   ",
        "  ✓ Inspect Claude task rendering                     ",
        "  ✓ Mirror completed task state                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
